@@ -6,32 +6,21 @@
  * =c
  * CheckPaint(X)
  * =s
- * duplicates packets with given paint annotation
+ * old name for PaintTee
  * V<duplication>
  * =d
- * CheckPaint sends every packet through output 0. If the packet's
- * color annotation is equal to X (an integer), CheckPaint also
- * sends a copy through output 1.
- *
- * =e
- * Intended to produce redirects in conjunction with Paint and
- * ICMPError as follows:
- *
- *   FromDevice(eth7) -> Paint(7) -> ...
- *   routingtable[7] -> cp :: CheckPaint(7) -> ... -> ToDevice(eth7)
- *   cp[1] -> ICMPError(18.26.4.24, 5, 1) -> [0]routingtable;
- *
- * =a Paint, ICMPError
- */
+ * This is the old name for the PaintTee element. You should use PaintTee
+ * instead.
+ * =a PaintTee */
 
 class CheckPaint : public Element {
   int _color;
   
  public:
   
-  CheckPaint()						: Element(1, 2) { }
+  CheckPaint()				: Element(1, 2) { }
   
-  const char *class_name() const		{ return "CheckPaint"; }
+  const char *class_name() const	{ return "CheckPaint"; }
   const char *processing() const	{ return "a/ah"; }
   
   CheckPaint *clone() const;
