@@ -763,7 +763,7 @@ int
 LexerT::ylocal()
 {
   // OK because every used ylocal() corresponds to at least one element
-  String name = "@X" + String(_router->nelements() - _anonymous_offset + 1);
+  String name = "@Class" + String(_router->nelements() - _anonymous_offset + 1);
   
   // '{' was already read
   RouterT *old_router = _router;
